# personal-website

./: .gitignore  .travis.yml  404.html  CNAME  Cargo.toml  Procfile  _config.yml  about.md  bower.json  boxfile.yml  build.rs  config.toml  index.html  index.xml  install.sh  posts.org  sitemap.xml  staticman.yml
.github/workflows/: gh-pages.yml
_includes/: head.html
_posts/: 2017-12-28-hail-hugo.md  2017-12-31-twid-openmw.md  2018-01-03-grokking-ecs.md  2018-01-07-twid-rss.md  2018-01-11-hugo-two-weeks-in.md  2018-01-14-twid-vim-minimalism.md  2018-01-21-twid-tmux.md  2018-01-25-five-months-into-hackers-diet.md  2018-01-28-twid-clifton-strengths.md  2018-02-04-twid-vasovagal-syncope.md  2018-02-18-book-recommendation-programming-rust.md  2018-03-28-on-fundamentals.md  2019-01-15-welcome-to-jekyll.markdown  2019-12-29-books-of-2019.md
_site/: feed.xml  index.html
app/js/: app.js  main.js  prism.js
app/sass/: .bak.main  _content.scss  _footer.scss  _header.scss  _mixin.scss  main.scss
assets/css/: style.scss
categories/: index.html  index.xml
categories/blogging/: index.html  index.xml
categories/reading/: index.html  index.xml
categories/softdev/: index.html  index.xml
categories/twid/: index.html  index.xml
categories/wellness/: index.html  index.xml
config/: log4rs.yml
content/posts/: book-recommendation-programming-rust.md  books-of-2019.md  five-months-into-hackers-diet.md  grokking-ecs.md  grokking-entity-component-systems.md  hail-hugo.md  hail_hugo.md  hugo-one-week-in.md  hugo-two-weeks-in.md  on-fundamentals.md  on_fundamentals.md  taking-escapism-for-granted.md  twid-clifton-strengths.md  twid-clifton-strenths.md  twid-open-mw.md  twid-openmw.md  twid-rss.md  twid-tmux.md  twid-vasovagal-syncope.md  twid-vim-minimalism.md
data/config/: widgets.toml
layouts/partials/: footer.html
migrations/20160820110733_create_blog_posts/: down.sql  up.sql
migrations/20160828085824_tags/: down.sql  up.sql
posts/: 20160707.md  dummy1.md  dummy2.md  index.html  index.xml  post1.md  post2.md
posts/book-recommendation-programming-rust/: index.html
posts/books-of-2019/: index.html
posts/deploying-ox-hugo-blog-with-github-actions/: index.html
posts/five-months-into-hackers-diet/: index.html
src/: app.rs  blog.rs  cli.rs  db.rs  lib.rs  main.rs  route.rs
static/: custom.css  main.css  prism.css
tags/: index.html  index.xml
tags/appdev/: index.xml  (+1 more)
templates/: #blog_post.hbs#  about.hbs  blog.hbs  blog_list.hbs  blog_list_noposts.hbs  blog_post.hbs  body.hbs  landing.hbs  main.hbs
(+45 files in other folders)
