[package]
authors = ["Krishan Wyse <kwysek@gmail.com>"]
build = "build.rs"
name = "personal-website"
version = "0.2.0"

[build-dependencies]
sass-rs = "0.0.18"

[dependencies]
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
fern = "0.3.5"
hoedown = "5.0.0"
iron = "0.4.0"
log = "0.3.6"
mount = "0.2.1"
router = "0.2.0"
serde = "0.8.3"
serde_json = "0.8.1"
serde_macros = "0.8.3"
staticfile = "0.3.0"

[dependencies.chrono]
default-features = false
features = ["serde"]
version = "0.2.25"

[dependencies.clippy]
optional = true
version = "0.0.84"

[dependencies.diesel]
default-features = false
features = ["chrono"]
version = "0.7.1"

[dependencies.diesel_codegen]
default-features = false
features = ["postgres"]
version = "0.7.1"

[dependencies.handlebars-iron]
default-features = false
features = ["serde_type"]
version = "0.18.0"

[features]
default = []
live-reload = ["handlebars-iron/watch"]
