[package]
authors = ["Krishan Wyse <kwysek@gmail.com>"]
build = "build.rs"
name = "personal-website"
version = "0.4.0"

[build-dependencies]
sass-rs = "0.0.18"

[dependencies]
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
fern = "0.3.5"
hoedown = "5.0.0"
iron = "0.4.0"
log = "0.3.6"
mount = "0.2.1"
router = "0.4.0"
serde = "0.8.12"
serde_derive = "0.8.12"
serde_json = "0.8.2"
staticfile = "0.3.0"
urlencoded = "0.4.1"

[dependencies.chrono]
default-features = false
features = ["serde"]
version = "0.2.25"

[dependencies.clap]
default-features = false
features = ["unstable"]
version = "2.14.0"

[dependencies.clippy]
optional = true
version = "0.0.95"

[dependencies.diesel]
default-features = false
features = ["chrono"]
version = "0.8.0"

[dependencies.diesel_codegen]
default-features = false
features = ["dotenv", "postgres"]
version = "0.8.0"

[dependencies.handlebars-iron]
default-features = false
features = ["serde_type"]
version = "0.19.0"

[features]
default = []
live-reload = ["handlebars-iron/watch"]
